
- The widget used to select users or groups while protecting a business dossier now respects the sharing configuration. [mbaechtold]
- Fix an issue where solr facet labels have not been transformed correctly. [elioschmutz]
- Skip unknown attributes in POST @invitation endpoint. [elioschmutz]
- Add watchers, resources and subscriptions to tasks and forwarding in fixtures. [tinagerber]
- Add `is_admin_menu_visible` to the `@config` API endpoint. [mbaechtold]
- Watchers GET API: Also include info about referenced_users and referenced_watcher_roles. [tinagerber]
- Fix @solrsearch endpoint default sort order. [elioschmutz]
- Bump ftw.bumblebee to 3.9.0 which provides functionality for indexing checksums after bundle import. [buchi]


2020.3.0rc2 (2020-05-07)
------------------------

- Drop sorting by sortable_author for solr and avoid handling sorting parameters as fields. [deiferni]
- Add live chat to online documentation. [njohner]
- Bump ftw.monitor and ftw.contentstats to get performance metrics. [lgraf]
- Merge notification settings for tasks. [elioschmutz]
- Add more metadata to response of favorites endpoint (`review_state`, `is_subdossier` and `is_leafnode`). [mbaechtold]
- Improve performance when resolving large dossiers. [deiferni]
- Add attributes `review_state`, `is_subdossier` and `is_leafnode` to the search results returned by `@solrsearch` and `@livesearch`. [mbaechtold]
- Add attribute `is_subdossier` to the children for GET requests to the API. [mbaechtold]
- Add is_subdossier to catalog metadata. [deiferni]
- Add @watchers endpoint for tasks and inbox forwardings. [tinagerber]
- Fix show proposal templates corresponding to the committee. [2e12]
- Add Bumblebee auto refresh feature to policy template. [2e12]
- Task GET API: Also include info about containing dossier. [mbaechtold]
- Enhance the API endpoint `@breadcrumbs` with more attributes. [mbaechtold]
- Add key `is_leafnode` to the API endpoint `@navigation`. [mbaechtold]